--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "Red social con el stack MEAN",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
