--- a/server/package.json
+++ b/server/package.json
@@ -28,5 +28,10 @@
     "mongoose": "^5.0.14",
     "mongoose-pagination": "^1.0.0",
     "morgan": "^1.9.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.11.0"
   }
 }
