--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular2-moment": "^1.9.0",
     "bootstrap": "3",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
